[package]
name = "eth-state-diff"
version = "0.1.0"
edition = "2021"
authors = ["galadd <gbolahanf.14@gmail.com>"]
description = "Minimal-allocation delta encoding for Ethereum consensus state, optimized for archival storage and zstd compression."
repository = "https://github.com/galadd/eth_state-diff"
license = "MIT OR Apache-2.0"
keywords = ["ethereum", "beacon-chain", "state-diff", "ssz", "delta-encoding"]
categories = ["compression", "encoding", "cryptography::cryptocurrencies"]

[dependencies]
rkyv = "0.8.17"
rustc-hash = "2.0"
